# harness-engineering

./: .env.example  .gitignore  PLAYBOOK.md  README.md  langsmith.env.example  main.py  providers.example.toml  pyproject.toml
.claude/skills/: harness-iterate.md
benchmark/: analyze.py  compare.py  run.py  tasks.py
harness/: __init__.py  agent.py  config.py  tracer.py
harness/middleware/: __init__.py  local_context.py  loop_detection.py  pre_completion.py  reasoning_sandwich.py
