[project]
name = "harness-engineering"
version = "0.1.0"
description = "Harness engineering skeleton for deepagents — reproduction of https://blog.langchain.com/improving-deep-agents-with-harness-engineering/"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "deepagents>=0.4.9",
    "langchain-anthropic>=1.3.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["harness"]
